@@ -67,3 +67,10 @@ compileJava {
 compileTestJava {
     options.compilerArgs += ["--enable-preview"]
 }
+
+application {
+    mainClass = 'ru.vk.itmo.test.reference.ReferenceService'
+    applicationDefaultJvmArgs = ['-Xmx128m', '--enable-preview', '-Xlog:gc']
+    // + ['-XX:+UseSerialGC']
+//
+}
